 * #668: Fix error when running the "prune" action with both "archive_name_format" and "prefix"
   options set.
 * #672: Selectively shallow merge certain mappings or sequences when including configuration files.
   See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#shallow-merge
 * #673: View the results of configuration file merging via "validate-borgmatic-config --show" flag.
   See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#debugging-includes
 * Add optional support for running end-to-end tests and building documentation with rootless Podman
   instead of Docker.

1.7.11
 * #479, #588: BREAKING: Automatically use the "archive_name_format" option to filter which archives
   get used for borgmatic actions that operate on multiple archives. Override this behavior with the
   new "match_archives" option in the storage section. This change is "breaking" in that it silently
   changes which archives get considered for "rlist", "prune", "check", etc. See the documentation
   for more information:
   https://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#archive-naming
 * #479, #588: The "prefix" options have been deprecated in favor of the new "archive_name_format"
   auto-matching behavior and the "match_archives" option.
 * #658: Add "--log-file-format" flag for customizing the log message format. See the documentation
   for more information:
   https://torsion.org/borgmatic/docs/how-to/inspect-your-backups/#logging-to-file
 * #662: Fix regression in which the "check_repositories" option failed to match repositories.
 * #663: Fix regression in which the "transfer" action produced a traceback.
 * Add spellchecking of source code during test runs.

1.7.10
 * #396: When a database command errors, display and log the error message instead of swallowing it.